--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: go
 
 go:
   - 1.8.x
-  - tip
 
 before_install:
   - go get -t -v ./...
@@ -12,3 +11,9 @@ script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
+deploy:
+    provider: script
+    script: bash docker_push
+    on:
+        branch: master
