--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
     "sample",
     "example"
   ],
-  "website": "http://github.com/heroku/go-getting-started",
-  "repository": "http://github.com/heroku/go-getting-started"
+  "website": "https://github.com/diegosanchez/ms_forms",
+  "repository": "https://github.com/diegosanchez/ms_forms"
 }
